# schedule-management-system

./: CMakeLists.txt  README.md
code/: Menu.cpp  Menu.h  ScheduleManager.cpp  ScheduleManager.h  Student.cpp  Student.h  classes.cpp  classes.h  marta.cpp  parsedatatovectors.cpp  parsedatatovectors.h  possible_operations.cpp  possible_operations.h  students.cpp  students.h
schedule/: classes.csv  students_classes.csv
